@@ -7,13 +7,13 @@ import com.br.pruma.application.service.AuditoriaService;
 import com.br.pruma.core.domain.Auditoria;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/pruma/v1/auditorias")
@@ -31,41 +31,54 @@ public class AuditoriaController {
     @GetMapping
     @Operation(summary = "Listar auditorias")
     public ResponseEntity<List<AuditoriaResponseDTO>> listarTodos() {
-        List<Auditoria> entidades = auditoriaService.listarTodos();
-        List<AuditoriaResponseDTO> dtos = entidades.stream()
+        List<AuditoriaResponseDTO> dtos = auditoriaService.listarTodos()
+                .stream()
                 .map(auditoriaMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList(); // ✅ Java 16+
         return ResponseEntity.ok(dtos);
     }
+
     @GetMapping("/{id}")
     @Operation(summary = "Buscar auditoria por ID")
     public ResponseEntity<AuditoriaResponseDTO> buscarPorId(@PathVariable Integer id) {
-        Optional<Auditoria> entidade = auditoriaService.buscarPorId(id);
-        return entidade.map(e -> ResponseEntity.ok(auditoriaMapper.toResponseDTO(e)))
+        return auditoriaService.buscarPorId(id)
+                .map(e -> ResponseEntity.ok(auditoriaMapper.toResponseDTO(e)))
                 .orElse(ResponseEntity.notFound().build());
     }
+
     @PostMapping
     @Operation(summary = "Criar nova auditoria")
-    public ResponseEntity<AuditoriaResponseDTO> criar(@RequestBody AuditoriaRequestDTO dto) {
-        Auditoria nova = auditoriaMapper.toEntity(dto);
-        Auditoria salva = auditoriaService.salvar(nova);
-        return ResponseEntity.ok(auditoriaMapper.toResponseDTO(salva));
+    public ResponseEntity<AuditoriaResponseDTO> criar(@Valid @RequestBody AuditoriaRequestDTO dto) {
+        // ✅ @Valid ativo
+        Auditoria salva = auditoriaService.salvar(auditoriaMapper.toEntity(dto));
+        AuditoriaResponseDTO resposta = auditoriaMapper.toResponseDTO(salva);
+
+        // ✅ Retorna 201 Created
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/{id}")
+                .buildAndExpand(salva.getId())
+                .toUri();
+        return ResponseEntity.created(location).body(resposta);
     }
+
     @PutMapping("/{id}")
     @Operation(summary = "Atualizar auditoria existente")
-    public ResponseEntity<AuditoriaResponseDTO> atualizar(@PathVariable Integer id, @RequestBody AuditoriaRequestDTO dto) {
-        if (auditoriaService.buscarPorId(id).isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        Auditoria entidade = auditoriaMapper.toEntity(dto);
-        entidade.setId(new UUID(0l,id));
-        Auditoria atualizada = auditoriaService.salvar(entidade);
-        return ResponseEntity.ok(auditoriaMapper.toResponseDTO(atualizada));
+    public ResponseEntity<AuditoriaResponseDTO> atualizar(
+            @PathVariable Integer id,
+            @Valid @RequestBody AuditoriaRequestDTO dto) {
+        // ✅ Operação atômica — sem race condition e sem bug de UUID
+        return auditoriaService.atualizar(id, auditoriaMapper.toEntity(dto))
+                .map(salva -> ResponseEntity.ok(auditoriaMapper.toResponseDTO(salva)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @DeleteMapping("/{id}")
     @Operation(summary = "Deletar auditoria por ID")
     public ResponseEntity<Void> deletar(@PathVariable Integer id) {
+        // ✅ Verifica existência antes de deletar
+        if (auditoriaService.buscarPorId(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
         auditoriaService.deletar(id);
         return ResponseEntity.noContent().build();
     }
